# Technical_assesment_wexaAI

./: .gitignore  README.md  docker-compose.yml  render.yaml
backend/: .env.example  generate_csv.py  pyproject.toml  requirements.txt  seed.py  seed_ecommerce.py  seed_finance.py
backend/alembic/: env.py
backend/alembic/versions/: 367c9ebf08ac_initial_schema.py
backend/app/: config.py  database.py  dependencies.py  exception_handlers.py  exceptions.py  main.py
backend/app/celery_app/: __init__.py  sync_db.py
backend/app/celery_app/tasks/: alerts.py  csv_processing.py  maintenance.py
backend/app/models/: __init__.py  alert.py  auth.py  base.py  dashboard.py  ingestion.py
backend/app/repositories/: alert.py  auth.py  base.py  dashboard.py  ingestion.py
backend/app/routers/: alerts.py  api_keys.py  auth.py  csv_uploads.py  dashboards.py  health.py  ingestion.py  invite.py  orgs.py  shared.py  ws.py
backend/app/schemas/: __init__.py  alert.py  auth.py  common.py  dashboard.py  ingestion.py  orgs.py  websocket.py
backend/app/services/: alert.py  auth.py  dashboard.py  email.py  ingestion.py  realtime.py
backend/app/utils/: security.py
design/: email-alert-preview.html  email-invite-preview.html  prototype.html
docs/: api-contracts.md
frontend/: .env.example  package-lock.json  package.json
frontend/src/app/: layout.tsx  page.tsx
frontend/src/hooks/: use-alerts.ts  use-auth.ts  use-dashboards.ts  use-data.ts  use-orgs.ts  use-role.ts
frontend/src/lib/: api-client.ts  query-keys.ts  ws-client.ts
sample_data/: health_events.csv
(+30 files in other folders)
